# create_autonomy

./: .travis.yml  README.md  dependecies.yaml  dependencies.repos  remote.repos  rpi.repos
android_assistant/: CMakeLists.txt  package.xml
android_assistant/launch/: send_goal.launch
android_assistant/src/: send_robot_goal.cpp
ca_actions/: CMakeLists.txt  package.xml
ca_actions/action/: LineFollower.action
ca_bringup/launch/: complete.launch  minimal.launch
ca_bumper2pc/: CMakeLists.txt
ca_color_sensor_plugin/: CMakeLists.txt  package.xml
ca_color_sensor_plugin/include/ca_color_sensor_plugin/: color_sensor_plugin.h
ca_color_sensor_plugin/src/: color_sensor_plugin.cpp
ca_dashboard/: package.xml
ca_description/launch/: create_description.launch
ca_description/meshes/: last_lens.stl  r200.dae
ca_description/scripts/: robot_spawner.py
ca_description/urdf/: april_tag.xacro  create_2.xacro  create_base.xacro  create_base_gazebo.urdf.xacro  create_base_gazebo.xacro  create_battery.xacro  create_color_sensor.xacro  create_light_sensor.xacro  roomblock.xacro
ca_description/urdf/sensors/: cliff_sensors.xacro  imu_sensor.xacro
ca_description/urdf/stacks/: roomblock.xacro  turtlebot.xacro
ca_driver/src/: create_driver.cpp
ca_gazebo/: .package.xml.swp  CMakeLists.txt  package.xml
ca_gazebo/include/ca_gazebo/: color_sensor_plugin.h  create_battery_plugin.h  create_imu_plugin.h  traffic_light_plugin.h  world_time_publisher.h
ca_gazebo/launch/: create_april_tags.launch  create_autorace.launch  create_cooperative_two_rooms.launch  create_corridor.launch  create_elevated.launch  create_empty_world.launch  create_house.launch  create_maze.launch  create_playground.launch  create_playpen.launch  create_restaurant.launch  create_servicesim.launch  create_stage_1.launch  create_stage_2.launch  create_sweet_house_3.launch  create_sweet_house_5.launch  create_tea_shop.launch  create_warehouse.launch  prueba.launch  spawn_create.launch  spawn_multirobot.launch
ca_gazebo/launch/include/: spawn_create.launch  spawn_multirobot.launch
ca_gazebo/models/apriltag1/: model.config
ca_gazebo/models/create_house/: model.sdf
ca_gazebo/src/: color_sensor_plugin.cpp  create_battery_plugin.cpp  create_cliff_plugin.cpp  create_diff_drive.cpp  create_imu_plugin.cpp  create_virtual_wall_plugin.cpp  traffic_light_plugin.cpp  world_time_publisher.cpp
ca_gazebo/test/: hz.test  static.test
ca_gazebo/worlds/: april_tags.world  autorace.world  camera_tutorial.world  create_autorace.world  empty.world  sweet_house_5.world  wall_object.xacro
ca_msgs/: CMakeLists.txt  package.xml
ca_msgs/msg/: LineFollowerMetrics.msg
ca_node/: CMakeLists.txt  package.xml
ca_node/launch/: create_2.launch
ca_node/scripts/: smach_ranking_controller.py
ca_tools/: CMakeLists.txt  package.xml
ca_tools/launch/: draw_square.launch  follow_lines.launch  keyboard_teleop.launch
ca_tools/rviz/: config.rviz  multi_robot.rviz
ca_tools/scripts/: GTSys.py  RobotLocalizationTf.py  controller.py  draw_square.py  follow_lines.py  ground_truth.py  line_follower_client.py  line_follower_server.py  move_square.py  path_printer.py  robot_localization_tf.py  test_pub.py
docker/: Makefile  README.md  build  docker_utils  docker_utils.py  launch_docker.sh  run
docker/create-melodic-gazebo9/: Dockerfile
docker/create_kinetic_nvidia/: Dockerfile
docker/create_melodic_nvidia/: Dockerfile
docker/create_ros_melodic/: Dockerfile
docker/create_ros_melodic_gazebo9/: Dockerfile  dependencies.repos  packages.txt
docs/: INSTALLATION.md  STRUCTURE.md
navigation/ProyectoSegmentacion/: CMakeLists.txt  README.txt  package.xml
navigation/ca_behavior_tree/: CMakeLists.txt
navigation/ca_cartographer/: CMakeLists.txt  package.xml
navigation/ca_cartographer/config/: ca_2d.lua  ca_localization_2d.lua
navigation/ca_cartographer/house_map/: map.pgm  map.yaml
navigation/ca_cartographer/launch/: mapping_cartographer.launch  pure_localization.launch  rviz_localization.launch  rviz_mapping.launch
navigation/ca_collaborative_move_base/: CMakeLists.txt  package.xml
navigation/ca_control/: CMakeLists.txt
navigation/ca_mapping/: CMakeLists.txt  package.xml
navigation/ca_mapping_exploration/: package.xml
navigation/ca_move_base/: CMakeLists.txt  package.xml
navigation/ca_planning/: CMakeLists.txt  README.md  package.xml
navigation/ca_planning/include/ca_planning/: cuckoo_search.h  jps_ros.h
navigation/ca_planning/include/ca_planning/cuckoo_search/: CMakeLists.txt
navigation/ca_planning/include/ca_planning/cuckoo_search/include/: Cuckoo.h  CuckooSearch.h  FunctionHelper.h  LevyFlight.h  Nest.h
navigation/ca_planning/include/ca_planning/cuckoo_search/src/: Cuckoo.cpp  CuckooSearch.cpp
navigation/ca_planning/include/ca_planning/jps_collision/: map_util.h
navigation/ca_planning/lib/cuckoo_search_lib/: README.md
navigation/ca_planning/lib/cuckoo_search_lib/include/cuckoo_search_lib/: CuckooSearch.h  FunctionHelper.h  Nest.h
navigation/ca_planning/lib/cuckoo_search_lib/src/: Cuckoo.cpp  CuckooSearch.cpp  FunctionHelper.cpp  Nest.cpp
navigation/ca_planning/plugins/: csp_plugin.xml
navigation/ca_planning/src/: cuckoo_search.cpp  jps_node.cpp  jps_ros.cpp
navigation/ca_room_segmentation/: CMakeLists.txt  README.md  package.xml
navigation/ca_room_segmentation/scripts/: Interfaz.py  move_base.py
navigation/ca_slam/: slam_gmapping.launch
navigation/ca_swarm/: package.xml
navigation/ca_visual_odometry/: CMakeLists.txt
navigation/mapping_exploration/: CMakeLists.txt  package.xml
navigation/mapping_exploration/launch/: explore_lite.launch
sensors/ca_camera/: CMakeLists.txt  package.xml
sensors/ca_imu/: CMakeLists.txt  README.md  package.xml
sensors/ca_imu/config/: madgwick_filter.yaml  mpu9255.yaml  mpu9255_calib.yaml
sensors/ca_imu/launch/: imu.launch  mpu9255.launch
sensors/ca_imu/scripts/: install_rtimulib.sh
sensors/ca_mpu9255/: CMakeLists.txt  README.md  package.xml
sensors/ca_mpu9255/launch/: mpu9255.launch
sensors/ca_mpu9255/src/: mpu9255_node.cpp  offsetIMU.cpp
(+84 files in other folders)
