<?xml version="1.0"?>
<package format="2">
  <name>ca_cartographer</name>
  <version>0.0.0</version>
  <description>Cartographer launchfiles and configuration for mapping and pure localization</description>

  <maintainer email="emiliano.borghi@gmail.com">Emiliano Borghi</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <export/>
</package>
